<resources>
    <string name="app_name">ToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note">Note:</string>
    <string name="add">Add</string>
    <string name="title">Title:</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="ok">Add</string>
    <string name="add_note">Add Note</string>
    <string name="notes">Notes</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="edit_title">Edit title</string>
    <string name="edit_note">Edit note</string>
    <string name="save_changes">Save Changes</string>
</resources>